--- a/prototypes/EyeTrackingTest/EyeTrackingTest/Base.lproj/Main.storyboard
+++ b/prototypes/EyeTrackingTest/EyeTrackingTest/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uec-WP-zZM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uec-WP-zZM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -168,10 +169,10 @@
             </objects>
             <point key="canvasLocation" x="343" y="-179"/>
         </scene>
-        <!--SixButtonKeyboardViewController-->
+        <!--HotCornersTrackableViewController-->
         <scene sceneID="gGD-Tj-hJm">
             <objects>
-                <viewControllerPlaceholder storyboardName="SixButtonKeyboardViewController" id="IvX-dq-8eZ" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="HotCornersTracking" referencedIdentifier="HotCornersTrackableViewController" id="IvX-dq-8eZ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jHJ-pO-z1P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="342" y="344"/>
